# simple_jira

./: Makefile  README.md  docker-compose.yml  dump.sql  pyproject.toml
src/app/: __main__.py  server.py
src/app/core/: config.py
src/containers/: auth.py  tasks.py
src/exceptions/: auth_exceptions.py  base.py
src/jwt_auth/: auth_bearer.py  auth_handler.py  helpers.py  permissions.py  schemas.py
src/migrations/versions/: 033e0e8a01ab_add_user_and_task.py
src/models/: __init__.py  task.py  user.py
src/repositories/: base.py  health_repository.py  task_repository.py  user_repository.py
src/routes/: __init__.py  auth_routes.py  health_router.py  health_routes.py  task_routes.py
src/schemas/: task_schemas.py  user_schemas.py
src/services/: auth_service.py  health_service.py  task_service.py  user_service.py
