[tool.poetry]
name = "simple-jira"
version = "0.1.0"
description = ""
authors = ["Artem Svistelnik <artem.svistelnik@gmail.com>"]
readme = "README.md"
packages = [{include = "simple_jira"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.114.1"
sqlalchemy = "^2.0.34"
alembic = "^1.13.2"
pydantic = {extras = ["email"], version = "^2.9.1"}
pydantic-settings = "^2.5.2"
uvicorn = "^0.30.6"
asyncpg = "^0.29.0"
pyjwt = "^2.9.0"
uvloop = "^0.20.0"
dependency-injector = "^4.42.0"
cryptography = "^43.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
